<resources>
    <string name="app_name">RuiTime</string>

    <!-- Instructions -->
    <string name="instructions_page1_1">"Welcome to RuiTime!"</string>
    <string name="instructions_page1_2">"After RuiTime is installed, you can start monitoring the frequency and amount of time you spend in your applications."</string>
    <string name="instructions_page1_3">"RuiTime follows your applications' daily running, it will get your permission to upload the statistics periodically to cloud server. With these data analyzed, RuiTime will provide you the best suggestion of application time management."</string>
    <string name="instructions_page1_swipe">Swipe and navigate to next page</string>

    <string name="instructions_page2_1">"Help you..."</string>
    <string name="instructions_page2_2">"In addition to the default <b>notification drawer</b> app shortcut bar, you can add and customize a <b>widget</b> for launching apps.  Specify the color, size, quantity, background color and more."</string>
    <string name="instructions_page2_3">ex. 2 differently styled Apps widgets</string>
    <string name="instructions_page2_4">App options menu</string>
    <string name="instructions_page2_5">"You can also <b>pin</b> apps to be permanently anchored.  Got an <b>icon pack</b> you like?  Hangar supports icon packs and even the ability to manually change an individual app\'s icon.\n\nFinally, you can exclude apps from showing up with the <b>blacklist</b> option.  Do all this and more from the Hangar <b>Apps tab</b>."</string>

    <string name="instructions_page3_1">"Get started"</string>
    <string name="instructions_page3_2">"RuiTime is a lightweight tool that makes launching apps convenient from anywhere in Android.\n\nTo enjoy the full benefits of this tool, it should have at least a day\'s worth of monitored app statistics to base its recommendations on.\n\nEnjoy and thank you for trying RuiTime!"</string>
    <string name="instructions_page3_button">Get Started</string>

    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="total_duration_used">"Total duration used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="sort">"Sort by: "</string>

    <string name="action_saving">"Saving statistics"</string>

    <string name="notification_saved">" is saved in the folder 'RuiTime'."</string>
    <string name="notification_unsaved">" is not saved successfully."</string>

    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>


</resources>
