<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingBottom="0dp"
    android:requiresFadingEdge="vertical"
    tools:context="ca.mimic.apphangar.Instructions$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/instructions_page3_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="15dp"
            android:text="@string/instructions_page3_2"/>

        <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/instructions_page2_1"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" />

        <Button
            android:id="@+id/btn2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/instructions_page3_button" />

    </LinearLayout>

</ScrollView>