<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingBottom="0dp"
    android:requiresFadingEdge="vertical"
    tools:context="com.rui.ruitime.InstructionsPlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:text="@string/instructions_page1_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"
            android:text="@string/instructions_page1_2"/>

        <ImageView
            tools:ignore="ContentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instructions_page1_1"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="12sp"
            android:textStyle="italic"
            android:text="@string/instructions_page1_swipe" />

    </LinearLayout>

</ScrollView>